<resources>
    <string name="app_name">SwipeTask</string>
    <string name="product_name">Product Name</string>
    <string name="tax_rate">Tax Rate</string>
    <string name="selling_price">Selling Price</string>
    <string name="product_type">Product Type</string>
    <string name="add_product">Add Product</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_product_name">Please enter product name</string>
    <string name="please_enter_product_type">Please enter product type</string>
    <string name="please_enter_product_price">Please enter product price</string>
    <string name="please_enter_product_tax_rate">Please enter product tax rate</string>
    <string name="swipe">Swipe</string>
    <string name="search_title">Search</string>
</resources>